--- a/blog-posts-page-post-2.html
+++ b/blog-posts-page-post-2.html
@@ -4,12 +4,6 @@
     <title>Personal Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- link to google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
-      rel="stylesheet"
-    />
-
     <!-- https://cdnjs.com/libraries/font-awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css"
@@ -17,7 +11,7 @@
     />
 
     <!-- link to my CSS -->
-    <link href="/styles/blog-posts-page/blog-posts.css" rel="stylesheet" />
+    <link href="./styles/blog-posts-page/blog-posts.css" rel="stylesheet" />
   </head>
   <body>
     <div class="grid-container">
