fix href link another time

--- a/blog-home-page.html
+++ b/blog-home-page.html
@@ -23,7 +23,7 @@
         </h1>
         <ul class="main-nav">
           <li><a class="current-page" href="#">Home</a></li>
-          <li><a href="/blog-posts-page-post-1.html">Posts</a></li>
+          <li><a href="./blog-posts-page-post-1.html">Posts</a></li>
           <li><a href="#">Subscribe</a></li>
           <li><a href="#">Sign In</a></li>
         </ul>
@@ -42,7 +42,7 @@
             <p class="card-category">Travel</p>
             <p class="card-title">Nature is where I found myself</p>
             <p class="card-info">Sept 17, 2019 | 8 comments</p>
-            <a href="/blog-posts-page-post-1.html" class="card-read-more"
+            <a href="./blog-posts-page-post-1.html" class="card-read-more"
               >Read more</a
             >
           </div>
@@ -55,7 +55,7 @@
             <p class="card-category">Guide</p>
             <p class="card-title">Trip to Iceland</p>
             <p class="card-info">Dec 29, 2019 | 3 comments</p>
-            <a href="/blog-posts-page-post-2.html" class="card-read-more"
+            <a href="./blog-posts-page-post-2.html" class="card-read-more"
               >Read more</a
             >
           </div>
@@ -68,9 +68,7 @@
             <p class="card-category">Journal</p>
             <p class="card-title">A lost lake on the hills</p>
             <p class="card-info">July 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page-post-1.html" class="card-read-more"
-              >Read more</a
-            >
+            <a href="#" class="card-read-more">Read more</a>
           </div>
           <div class="post-4 card">
             <img
@@ -83,7 +81,7 @@
               The 10 things you must do in Greenland
             </p>
             <p class="card-info">July 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page.html" class="card-read-more">Read more</a>
+            <a href="#" class="card-read-more">Read more</a>
           </div>
           <div class="post-5 card">
             <img
@@ -94,7 +92,7 @@
             <p class="card-category">Tech</p>
             <p class="card-title">Reviewing the new Nikon Z7</p>
             <p class="card-info">July 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page.html" class="card-read-more">Read more</a>
+            <a href="#" class="card-read-more">Read more</a>
           </div>
           <div class="post-6 card">
             <img
@@ -105,7 +103,7 @@
             <p class="card-category">Guide</p>
             <p class="card-title">10 days biking Argentina</p>
             <p class="card-info">July 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page.html" class="card-read-more">Read more</a>
+            <a href="#" class="card-read-more">Read more</a>
           </div>
           <div class="post-7 card">
             <img
@@ -116,7 +114,7 @@
             <p class="card-category">Travel</p>
             <p class="card-title">Top 3 national parks in the United States</p>
             <p class="card-info">July 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page.html" class="card-read-more">Read more</a>
+            <a href="#" class="card-read-more">Read more</a>
           </div>
           <div class="post-8 card">
             <img
@@ -127,7 +125,7 @@
             <p class="card-category">Review</p>
             <p class="card-title">Top 10 midwest <br />bed & breakfasts</p>
             <p class="card-info">July 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page.html" class="card-read-more">Read more</a>
+            <a href="#" class="card-read-more">Read more</a>
           </div>
           <div class="post-9 card">
             <img
@@ -138,7 +136,7 @@
             <p class="card-category">Guide</p>
             <p class="card-title">Iceland trails</p>
             <p class="card-info">June 23, 2019 | 3 comments</p>
-            <a href="/blog-posts-page.html" class="card-read-more">Read more</a>
+            <a href="#" class="card-read-more">Read more</a>
           </div>
         </div>
       </main>
