--- a/blog-posts-page-post-1.html
+++ b/blog-posts-page-post-1.html
@@ -21,7 +21,7 @@
           <!-- <a href="#"><img class="logo" src="images/logo.svg" alt="logo"/></a> -->
         </h1>
         <ul class="main-nav">
-          <li><a href="/blog-home-page.html">Home</a></li>
+          <li><a href="./blog-home-page.html">Home</a></li>
           <li><a class="current-page" href="#">Posts</a></li>
           <li><a href="#">Subscribe</a></li>
           <li><a href="#">Sign In</a></li>
@@ -65,10 +65,6 @@
             consectetur, adipisicing elit. Assumenda laudantium perspiciatis
             minima.
           </p>
-
-          <a href="/blog-home-page.html" class="article-read-more"
-            >BACK TO HOME PAGE</a
-          >
           <div class="author-info">
             <img
               src="https://i.pravatar.cc/50?u=a042581f4e2902670"
@@ -77,6 +73,16 @@
             />
             <p>Mikel McCay</p>
           </div>
+
+          <a href="./blog-home-page.html" class="article-read-more"
+            >BACK TO HOME PAGE</a
+          >
+          <div class="buttons">
+           <button class="button">Older</button>
+           <button class="button">Newest</button>
+          </div>
+
+
         </article>
       </main>
 
@@ -103,7 +109,7 @@
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Keeping cooking simple</h3>
             <img
-              src="/images/food.jpg"
+              src="./images/food.jpg"
               alt="two dumplings on a wood plate with chopsticks"
               class="widget-image"
             />
@@ -111,7 +117,7 @@
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Simplicity and work</h3>
             <img
-              src="/images/work.jpg"
+              src="./images/work.jpg"
               alt="a chair white chair at a white desk on a white wall"
               class="widget-image"
             />
@@ -119,7 +125,7 @@
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Simple decorations</h3>
             <img
-              src="/images/deco.jpg"
+              src="./images/deco.jpg"
               alt="a green plant in a clear, round vase with water in it"
               class="widget-image"
             />
