--- a/blog-posts-page-post-2.html
+++ b/blog-posts-page-post-2.html
@@ -21,7 +21,7 @@
           <!-- <a href="#"><img class="logo" src="images/logo.svg" alt="logo"/></a> -->
         </h1>
         <ul class="main-nav">
-          <li><a href="/blog-home-page.html">Home</a></li>
+          <li><a href="./blog-home-page.html">Home</a></li>
           <li><a class="current-page" href="#">Posts</a></li>
           <li><a href="#">Subscribe</a></li>
           <li><a href="#">Sign In</a></li>
@@ -34,7 +34,7 @@
         <article class="article-featured">
           <h2 class="article-title">Guide to Iceland</h2>
           <img
-            src="/images/image-2.jpg"
+            src="./images/image-2.jpg"
             alt="simple white desk on a white wall with a plant on the far right side"
             class="article-image"
           />
@@ -66,9 +66,6 @@
             minima.
           </p>
 
-          <a href="/blog-home-page.html" class="article-read-more"
-            >BACK TO HOME PAGE</a
-          >
           <div class="author-info">
               <img
                 src="https://i.pravatar.cc/50?u=a042581f4e2902673"
@@ -76,7 +73,17 @@
                 class="card-profile"
               />
               <p>Monika Suz</p>
-            </div>
+          </div>
+
+          <a href="./blog-home-page.html" class="article-read-more"
+            >BACK TO HOME PAGE</a
+          >
+
+
+            <div class="buttons">
+              <button class="button">Older</button>
+              <button class="button">Newest</button>
+             </div>
         </article>
       </main>
 
@@ -103,7 +110,7 @@
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Keeping cooking simple</h3>
             <img
-              src="/images/food.jpg"
+              src="./images/food.jpg"
               alt="two dumplings on a wood plate with chopsticks"
               class="widget-image"
             />
@@ -111,7 +118,7 @@
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Simplicity and work</h3>
             <img
-              src="/images/work.jpg"
+              src="./images/work.jpg"
               alt="a chair white chair at a white desk on a white wall"
               class="widget-image"
             />
@@ -119,7 +126,7 @@
           <div class="widget-recent-post">
             <h3 class="widget-recent-post-title">Simple decorations</h3>
             <img
-              src="/images/deco.jpg"
+              src="./images/deco.jpg"
               alt="a green plant in a clear, round vase with water in it"
               class="widget-image"
             />
